syntax = "proto3";

package leilao;

option java_multiple_files = true;
option java_package = "br.com.leilao.grpc";
option java_outer_classname = "LeilaoProto";

service LeilaoService {
  rpc fazerLance(LanceRequest) returns (LanceResponse);

  rpc acompanharLeilao(AcompanharRequest) returns (stream AtualizacaoLeilao);

  rpc encerrarLeilao(EncerrarRequest) returns (ResultadoLeilao);
}


message Lance {
  string nome_usuario = 1;
  double valor = 2;
}

message LanceRequest {
  double valor = 1;
  string nomeUsuario = 2;
}

message LanceResponse {
  bool sucesso = 1;
  string mensagem = 2;
}

message AcompanharRequest {
  // No futuro, poderia ter um 'itemId' para leilões específicos
}

enum StatusLeilao {
  ATIVO = 0;
  FECHADO = 1;
}

message AtualizacaoLeilao {
  double valorMinimoAtual = 1;
  string ultimoLicitante = 2;
  string mensagem = 3;
  StatusLeilao status = 5;
}

message EncerrarRequest {}

message ResultadoLeilao {
  string ganhador = 1;
  double valorGanhador = 2;
  repeated Lance lances = 3; // Lista com o histórico de todos os lances
}